--- a/medium-flask-app/Makefile
+++ b/medium-flask-app/Makefile
@@ -2,6 +2,14 @@
 
 .PHONY: setup start stop clean
 
+# Install Poetry and its dependencies
+install:
+	@echo "Installing Poetry..."
+	curl -sSL https://install.python-poetry.org | python -
+	@echo "Installing dependencies with Poetry..."
+	poetry install
+
+
 setup:
 	docker-compose build
 
