--- a/medium-flask-app/pyproject.toml
+++ b/medium-flask-app/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 flask = "^3.0.3"
 python-dotenv = "^1.0.1"
+streamlit = "^1.40.0"
+requests = "^2.32.3"
 
 
 [build-system]
